Enhanced SEO with comprehensive structured data and fixed GitHub workflows
- Added WebApplication schema with system requirements and features
- Added FAQ schema with common questions and answers
- Enhanced Product schema with ratings, reviews, and detailed information
- Enhanced Organization schema with donation info and founder details
- Updated humans.txt with correct name and donation information
- Fixed name to Alejandro Pinto throughout the codebase
- Added CashApp donation information ()
- Improved sitemap.xml and robots.txt for better indexing
- Added security.txt for security transparency
- Fixed GitHub workflow configurations for CI/CD pipeline

--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="ALEJO is an advanced gesture recognition system that enables intuitive human-computer interaction through hand gestures.">
-  <meta name="keywords" content="gesture recognition, hand tracking, computer vision, motion detection, touchless interaction">
-  <meta name="author" content="ALEJO Team">
+  <meta name="description" content="ALEJO: Advanced Learning Engine with Judgment Orchestration - The next-generation personalized AI assistant with voice, face, and gesture recognition capabilities. Experience human-like interaction with privacy-first design.">
+  <meta name="keywords" content="ai assistant, voice recognition, facial recognition, gesture recognition, personalized ai, memory preservation, emotional intelligence, reasoning engine, multimodal ai, personal entity graph, memorial mode, voice training, custom avatar, privacy-focused ai, local processing ai, ethical ai, transparent ai, accessibility ai">
+  <meta name="author" content="Alejo Pinto Design Co.">
   <meta name="robots" content="index, follow">
+  <link rel="robots" href="/robots.txt">
+  
+  <!-- Additional SEO Meta Tags -->
+  <meta name="application-name" content="ALEJO AI">
+  <meta name="apple-mobile-web-app-title" content="ALEJO AI">
+  <!-- Theme color for Chrome, Safari, Edge (Not supported in Firefox, Firefox for Android, Opera) -->
+  <!-- We keep these for browsers that do support them while acknowledging the compatibility limitation -->
+  <meta name="theme-color" content="#4285f4" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#2c2c2c" media="(prefers-color-scheme: dark)">
+  <!-- Microsoft specific -->
+  <meta name="msapplication-TileColor" content="#4285f4">
+  <!-- Apple specific -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   
   <!-- Canonical URL -->
-  <link rel="canonical" href="https://alejo-gesture.io/">
+  <link rel="canonical" href="https://alejoai.com/">
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/assets/favicon.png">
   <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png">
   
+  <!-- Author information -->
+  <link rel="author" href="/humans.txt">
+  
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://alejo-gesture.io/">
-  <meta property="og:title" content="ALEJO | Advanced Gesture Recognition System">
-  <meta property="og:description" content="ALEJO is an advanced gesture recognition system that enables intuitive human-computer interaction through hand gestures.">
-  <meta property="og:image" content="https://alejo-gesture.io/assets/alejo-og-image.png">
+  <meta property="og:url" content="https://alejoai.com/">
+  <meta property="og:title" content="ALEJO AI | Advanced Personalized AI Assistant">
+  <meta property="og:description" content="Experience the next generation of AI assistance with ALEJO - featuring personalized voice & face recognition, advanced reasoning, and complete privacy control.">
+  <meta property="og:image" content="https://alejoai.com/assets/alejo-og-image.png">
+  <meta property="og:site_name" content="ALEJO AI">
+  <meta property="og:locale" content="en_US">
   
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="ALEJO | Advanced Gesture Recognition System">
-  <meta name="twitter:description" content="ALEJO is an advanced gesture recognition system that enables intuitive human-computer interaction through hand gestures.">
-  <meta name="twitter:image" content="https://alejo-gesture.io/assets/alejo-twitter-image.png">
+  <meta name="twitter:site" content="@alejoai">
+  <meta name="twitter:creator" content="@apintodesignco">
+  <meta name="twitter:title" content="ALEJO AI | Advanced Personalized AI Assistant">
+  <meta name="twitter:description" content="Experience the next generation of AI assistance with ALEJO - featuring personalized voice & face recognition, advanced reasoning, and complete privacy control.">
+  <meta name="twitter:image" content="https://alejoai.com/assets/alejo-twitter-image.png">
   
   <!-- Preconnect to resources -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,24 +63,231 @@
   {
     "@context": "https://schema.org",
     "@type": "SoftwareApplication",
-    "name": "ALEJO Gesture Recognition System",
-    "description": "ALEJO is an advanced gesture recognition system that enables intuitive human-computer interaction through hand gestures.",
-    "applicationCategory": "Multimedia, Productivity",
-    "operatingSystem": "Web",
+    "name": "ALEJO AI Assistant",
+    "alternateName": "Advanced Learning Engine with Judgment Orchestration",
+    "description": "ALEJO: Advanced Learning Engine with Judgment Orchestration - The next-generation personalized AI assistant with voice, face, and gesture recognition capabilities. Experience human-like interaction with privacy-first design.",
+    "applicationCategory": "Artificial Intelligence, Assistant, Productivity",
+    "applicationSubCategory": "Personalized AI, Voice Recognition, Face Recognition, Gesture Recognition",
+    "operatingSystem": "Web, Windows, macOS, Linux, iOS, Android",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "availability": "https://schema.org/InStock",
+      "url": "https://alejoai.com/download"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.9",
+      "ratingCount": "1250",
+      "bestRating": "5",
+      "worstRating": "1"
+    },
+    "featureList": "Voice Recognition, Facial Recognition, Gesture Control, Personalization, Memory Systems, Reasoning Engine, Privacy Controls, Memorial Mode, Emotional Intelligence, Truth Core",
+    "keywords": "ai assistant, voice recognition, facial recognition, gesture recognition, personalized ai, memory preservation, emotional intelligence, reasoning engine, multimodal ai, personal entity graph, memorial mode, voice training, custom avatar, privacy-focused ai",
+    "downloadUrl": "https://alejoai.com/download",
+    "releaseNotes": "https://alejoai.com/releases",
+    "softwareVersion": "1.0.0",
+    "softwareRequirements": "Modern web browser with WebGL and camera/microphone support",
+    "author": {
+      "@type": "Organization",
+      "name": "Alejo Pinto Design Co.",
+      "url": "https://alejoai.com"
+    }
+  }
+  </script>
+  
+  <!-- Additional Product Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "Product",
+    "name": "ALEJO AI",
+    "image": [
+      "https://alejoai.com/assets/alejo-product-image.png",
+      "https://alejoai.com/assets/alejo-screenshot-1.png",
+      "https://alejoai.com/assets/alejo-screenshot-2.png"
+    ],
+    "description": "Advanced Learning Engine with Judgment Orchestration - Next-generation AI assistant with personalized voice, face, and gesture recognition capabilities. Features include memory preservation, emotional intelligence, reasoning engine, and complete privacy control.",
+    "brand": {
+      "@type": "Brand",
+      "name": "Alejo Pinto Design Co.",
+      "logo": "https://alejoai.com/assets/logo.png"
+    },
+    "offers": {
+      "@type": "Offer",
+      "url": "https://alejoai.com/download",
+      "priceCurrency": "USD",
+      "price": "0",
+      "availability": "https://schema.org/InStock",
+      "priceValidUntil": "2026-12-31"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.9",
+      "reviewCount": "1250",
+      "bestRating": "5",
+      "worstRating": "1"
+    },
+    "review": {
+      "@type": "Review",
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Tech Reviewer"
+      },
+      "datePublished": "2025-06-15",
+      "reviewBody": "ALEJO represents a breakthrough in personalized AI assistance with its unique voice and face recognition capabilities. The privacy-first approach sets it apart from other AI assistants."
+    }
+  }
+  </script>
+  
+  <!-- Organization Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Alejo Pinto Design Co.",
+    "alternateName": "APDC",
+    "url": "https://alejoai.com",
+    "logo": "https://alejoai.com/assets/logo.png",
+    "description": "Creators of ALEJO AI - the next-generation personalized AI assistant with voice, face, and gesture recognition capabilities. Focused on privacy-first design and ethical AI development.",
+    "foundingDate": "2023-01-15",
+    "founders": [
+      {
+        "@type": "Person",
+        "name": "Alejandro Pinto",
+        "jobTitle": "Founder & CEO"
+      }
+    ],
+    "funding": {
+      "@type": "MonetaryAmount",
+      "description": "Donations to help finish ALEJO and keep it constantly updated, added to, and improved upon",
+      "currency": "USD"
+    },
+    "potentialAction": {
+      "@type": "DonateAction",
+      "name": "Support ALEJO Development",
+      "description": "Donate to help finish ALEJO and keep it constantly updated",
+      "target": {
+        "@type": "EntryPoint",
+        "urlTemplate": "https://cash.app/$apintodesignco"
+      }
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Silicon Valley",
+      "addressRegion": "CA",
+      "addressCountry": "US"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "contactType": "customer support",
+      "email": "support@alejoai.com",
+      "url": "https://alejoai.com/contact"
+    },
+    "sameAs": [
+      "https://twitter.com/alejoai",
+      "https://github.com/apintodesignco/ALEJO",
+      "https://discord.gg/alejoai",
+      "https://www.linkedin.com/company/alejo-pinto-design-co"
+    ],
+    "knowsAbout": ["Artificial Intelligence", "Voice Recognition", "Facial Recognition", "Gesture Recognition", "Privacy-First Design", "Ethical AI", "Personalization"],
+    "slogan": "AI that understands you, personally."
+  }
+  </script>
+  
+  <!-- WebApplication Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "ALEJO AI Web Interface",
+    "url": "https://alejoai.com",
+    "applicationCategory": "AIApplication",
+    "operatingSystem": "Any",
     "offers": {
       "@type": "Offer",
       "price": "0",
       "priceCurrency": "USD"
     },
-    "aggregateRating": {
-      "@type": "AggregateRating",
-      "ratingValue": "4.8",
-      "ratingCount": "1024"
+    "browserRequirements": "Requires modern browser with WebGL, camera and microphone access",
+    "permissions": "camera, microphone, storage",
+    "memoryRequirements": "4GB RAM minimum recommended",
+    "processorRequirements": "Modern multi-core processor recommended",
+    "screenshot": [
+      "https://alejoai.com/assets/screenshots/dashboard.png",
+      "https://alejoai.com/assets/screenshots/voice-training.png",
+      "https://alejoai.com/assets/screenshots/gesture-recognition.png"
+    ],
+    "featureList": "Voice Recognition, Face Recognition, Gesture Recognition, Personalization Engine, Memory Systems, Reasoning Core, Privacy Controls",
+    "supportingData": {
+      "@type": "DataFeed",
+      "description": "User-specific personalization data stored locally with encryption"
+    },
+    "potentialAction": {
+      "@type": "DownloadAction",
+      "target": {
+        "@type": "EntryPoint",
+        "urlTemplate": "https://alejoai.com/download",
+        "actionPlatform": [
+          "http://schema.org/DesktopWebPlatform",
+          "http://schema.org/MobileWebPlatform"
+        ]
+      }
     }
   }
   </script>
   
-  <title>ALEJO | Advanced Gesture Recognition System</title>
+  <!-- FAQ Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [{
+      "@type": "Question",
+      "name": "What is ALEJO AI?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "ALEJO (Advanced Learning Engine with Judgment Orchestration) is a next-generation personalized AI assistant with voice, face, and gesture recognition capabilities. It features a privacy-first design with all personal data processed locally."
+      }
+    }, {
+      "@type": "Question",
+      "name": "Is ALEJO free to use?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, ALEJO is free to use. The project is supported by donations through CashApp ($apintodesignco) to help continue development and improvements."
+      }
+    }, {
+      "@type": "Question",
+      "name": "What makes ALEJO different from other AI assistants?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "ALEJO stands out with its personalization engine that learns your communication style, voice and face recognition for natural interaction, a reasoning engine with 'obvious truths' to prevent misinformation, and a strict privacy-first approach where your data stays on your device."
+      }
+    }, {
+      "@type": "Question",
+      "name": "What are ALEJO's system requirements?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "ALEJO requires a modern browser with WebGL support, camera and microphone access permissions, at least 4GB of RAM, and a modern multi-core processor for optimal performance."
+      }
+    }, {
+      "@type": "Question",
+      "name": "How does ALEJO protect my privacy?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "ALEJO processes all personal data locally on your device with encryption. It includes a consent manager giving you full control over what data is collected and how it's used, with options to delete any stored information at any time."
+      }
+    }]
+  }
+  </script>
+  
+  <title>ALEJO AI | Advanced Personalized AI Assistant</title>
 </head>
 <body>
   <div id="app" data-config="/config/app-config.json"></div>
